tdf#90441: sw: *another* crash on shutdown after changing SvxAutoCorrCfg

The AutoText dialog instantly applies changes to SvxAutoCorrCfg and
never calls Commit().

Change-Id: I8e5f8b42fff117bd4c4a07a3a31b9943ada43f34